--- a/article/references.bib
+++ b/article/references.bib
@@ -340,3 +340,110 @@
   journal = {Proceedings of the AAAI Conference on Artificial Intelligence},
   doi     = {10.1609/aaai.v38i16.29734}
 }
+
+@article{verma2019lexical,
+  title   = {A lexical, syntactic, and semantic perspective for understanding style in text},
+  author  = {Verma, Gaurav and Srinivasan, Balaji Vasan},
+  journal = {arXiv preprint arXiv:1909.08349},
+  year    = {2019}
+}
+
+@inproceedings{wegmann-etal-2022-author,
+  title     = {Same Author or Just Same Topic? Towards Content-Independent Style Representations},
+  author    = {Wegmann, Anna  and
+               Schraagen, Marijn  and
+               Nguyen, Dong},
+  editor    = {Gella, Spandana  and
+               He, He  and
+               Majumder, Bodhisattwa Prasad  and
+               Can, Burcu  and
+               Giunchiglia, Eleonora  and
+               Cahyawijaya, Samuel  and
+               Min, Sewon  and
+               Mozes, Maximilian  and
+               Li, Xiang Lorraine  and
+               Augenstein, Isabelle  and
+               Rogers, Anna  and
+               Cho, Kyunghyun  and
+               Grefenstette, Edward  and
+               Rimell, Laura  and
+               Dyer, Chris},
+  booktitle = {Proceedings of the 7th Workshop on Representation Learning for NLP},
+  month     = may,
+  year      = {2022},
+  address   = {Dublin, Ireland},
+  publisher = {Association for Computational Linguistics},
+  url       = {https://aclanthology.org/2022.repl4nlp-1.26},
+  doi       = {10.18653/v1/2022.repl4nlp-1.26},
+  pages     = {249--268}
+}
+
+@book{lugea2023stylistics,
+  title     = {Stylistics: Text, Cognition and Corpora},
+  author    = {Lugea, Jane and Walker, Brian},
+  year      = {2023},
+  month     = {october},
+  publisher = {Palgrave Macmillan Cham},
+  doi       = {10.1007/978-3-031-10422-0},
+  isbn      = {978-3-031-10422-0}
+}
+
+@report{kincaid1975derivation,
+  title     = {Derivation of new readability formulas (automated readability index, fog count and flesch reading ease formula) for navy enlisted personnel},
+  author    = {Kincaid, J Peter and Fishburne Jr, Robert P and Rogers, Richard L and Chissom, Brad S},
+  year      = {1975},
+  publisher = {Institute for Simulation and Training, University of Central Florida}
+}
+
+@misc{olar2024experimentcode,
+  title  = {How Consistent are LLMs in Applying Handcrafted Language Features - Code Repository},
+  url    = {https://github.com/koosie0507/llm-tst-consistency.git},
+  author = {Andrei Olar},
+  year   = {2024},
+  month  = {june},
+  note   = {accessed on 2024-06-13}
+}
+
+@inproceedings{yelp2015neurips,
+  author    = {Zhang, Xiang and Zhao, Junbo and LeCun, Yann},
+  booktitle = {Advances in Neural Information Processing Systems},
+  editor    = {C. Cortes and N. Lawrence and D. Lee and M. Sugiyama and R. Garnett},
+  pages     = {},
+  publisher = {Curran Associates, Inc.},
+  title     = {Character-level Convolutional Networks for Text Classification},
+  url       = {https://proceedings.neurips.cc/paper_files/paper/2015/file/250cf8b51c773f3f8dc8b4be867a9a02-Paper.pdf},
+  volume    = {28},
+  year      = {2015}
+}
+
+@inproceedings{cnndm2017,
+  title     = {Get To The Point: Summarization with Pointer-Generator Networks},
+  author    = {See, Abigail  and
+               Liu, Peter J.  and
+               Manning, Christopher D.},
+  booktitle = {Proceedings of the 55th Annual Meeting of the Association for Computational Linguistics (Volume 1: Long Papers)},
+  month     = jul,
+  year      = {2017},
+  address   = {Vancouver, Canada},
+  publisher = {Association for Computational Linguistics},
+  url       = {https://www.aclweb.org/anthology/P17-1099},
+  doi       = {10.18653/v1/P17-1099},
+  pages     = {1073--1083}
+}
+
+@inproceedings{cnndm2015,
+  author    = {Karl Moritz Hermann and Tomás Kociský and Edward Grefenstette and Lasse Espeholt and Will Kay and Mustafa Suleyman and Phil Blunsom},
+  title     = {Teaching Machines to Read and Comprehend},
+  year      = {2015},
+  cdate     = {1420070400000},
+  pages     = {1693-1701},
+  url       = {http://papers.nips.cc/paper/5945-teaching-machines-to-read-and-comprehend},
+  booktitle = {NIPS}
+}
+
+@misc{hanna2024,
+  title  = {HANNA Benchmark Repository},
+  author = {Cyril Chhun and Fabian Suchanek and Chloé Clavel},
+  url    = {https://github.com/dig-team/hanna-benchmark-asg},
+  note   = {accessed 2024-06-01}
+}
